--- a/index.html
+++ b/index.html
@@ -84,13 +84,7 @@
 				</section>
 				<a href="#benefits" class="scrollImg" ><img src="assets/img/icons/pil-gif.gif" alt=""></a>
 			</div>
-
-
-
 		</div>
-
-
-
 	</header>
 
 	<!-- <header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
@@ -147,7 +141,8 @@
 	</section>
 -->
 	<section id="benefits" class="benefits wow fadeInUp" data-wow-duration="1s" style="margin-top: 6vh;">
-		<div class="container df-jcsb-aic">
+			<h2 class="benefits__header-title instructions__title"> Преимущества</h2>
+			<div class="container df-jcsb-aic">
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
 				<img class="benefits__image" src="./assets/img/benefits/1.png" alt="">
 				<div class="benefits__text">
@@ -262,7 +257,7 @@
 
 	<section class="promotions">
 		<div class="container wow slideInRight" data-wow-duration="0.5s">
-			<h2 class="promotions__title title"> Акции и бонусы от PlayStrike</h2>
+			<h2 class="promotions__title"> Акции и бонусы от PlayStrike</h2>
 			<div class="promotions__card">
 				<div class="promotions__card-title">Акции и бонусы</div>
 				<div class="promotions__card-descriptions">Пополни баланс сегодня и получи Profeccional подписку на 30 дней
