--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
 						<div class="main__buttons df-jcsb-aic">
 							<a class="button button_yellow-transparent df-jcsb-aic" style="background: #FAC704;
     color: #161616;margin-right: 2vw;" href="https://my.playstrike.ru/auth/signup">Начать играть</a>
-							<a class="button button_yellow-transparent df-jcsb-aic"> Скачать на Windows <img
+							<a class="button button_yellow-transparent df-jcsb-aic" href="/apps.html"> Скачать на Windows <img
 									src="./assets/img/icons/windows-icon.svg" alt=""></a>
 
 						</div>
 						<a href="">
-							<p class="macos">Скачать версию приложения для MacOS
+							<a class="macos" href="/apps.html">Скачать версию приложения для MacOS
 								<!--        <img class="apple__icon" src="./assets/img/icons/apple-icon.svg" alt="">-->
-							</p>
+							</a>
 						</a>
 					</div>
 				</section>
-				<a href="#benefits" class="scrollImg" ><img src="assets/img/icons/pil-gif.gif" alt=""></a>
+				<a href="#benefits" class="scrollImg"><img src="assets/img/icons/pil-gif.gif" alt=""></a>
 			</div>
 		</div>
 	</header>
@@ -141,8 +141,8 @@
 	</section>
 -->
 	<section id="benefits" class="benefits wow fadeInUp" data-wow-duration="1s" style="margin-top: 6vh;">
-			<h2 class="benefits__header-title instructions__title"> Преимущества</h2>
-			<div class="container df-jcsb-aic">
+		<h2 class="benefits__header-title instructions__title"> Преимущества</h2>
+		<div class="container df-jcsb-aic">
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
 				<img class="benefits__image" src="./assets/img/benefits/1.png" alt="">
 				<div class="benefits__text">
@@ -613,9 +613,7 @@
 			<div class="statistic__info wow fadeInRight" data-wow-duration="0.5s">
 				<h2 class="statistic__title">Подробная статистика</h2>
 				<p class="statistic__description">
-					Подробная расширенная статистика позволит вам отслеживать свой прогресс по
-					мере повышения рейтинга. Гибкая система оценок позволит Вам ставить новые цели и достигать их каждый день, а
-					отбор экспертами PlayStrike будет основываться на ваших рейтинговых достижениях.
+					Не просто игра... Подробная статистика позволит вам отслеживать свой прогресс по мере повышения рейтинга.
 				</p>
 				<a href="https://my.playstrike.ru/" class="button button_yellow">Создать аккаунт</a>
 			</div>
@@ -627,9 +625,8 @@
 			<div class="application__info wow fadeInLeft" data-wow-duration="0.5s">
 				<h2 class="application__title">Удобное приложение PlayStrike</h2>
 				<p class="application__description">
-					Повседневная практика показывает, что сложившаяся структура организации требуют определения и уточнения
-					системы обучения кадров, соответствует насущным потребностям. Идейные соображения высшего порядка, а также
-					рамки и место обучения кадров требуют определения и уточнения системы обучения кадров
+					Удобные приложения под все популярные платформы. Играйте, общайтесь, следите за новостями с любого устройства
+					и в любом удобном месте.
 				</p>
 				<div class="application__platforms">
 					<div class="platform__card">
@@ -652,9 +649,9 @@
 					</div>
 				</div>
 				<div class="application__buttons df-jcsb-aic">
-					<a class="button button_yellow-transparent df-jcsb-aic">Скачать на Mac <img class="apple__icon"
-							src="./assets/img/icons/apple-icon.svg" alt=""></a>
-					<a class="button button_yellow-transparent df-jcsb-aic"> Скачать на Windows <img
+					<a class="button button_yellow-transparent df-jcsb-aic" href="/apps.html">Скачать на Mac <img
+							class="apple__icon" src="./assets/img/icons/apple-icon.svg" alt=""></a>
+					<a class="button button_yellow-transparent df-jcsb-aic" href="/apps.html"> Скачать на Windows <img
 							src="./assets/img/icons/windows-icon.svg" alt=""></a>
 				</div>
 			</div>
@@ -662,112 +659,35 @@
 				src="./assets/img/previews/app-preview-2.png" alt="">
 		</div>
 	</section>
-	<footer class="footer">
-		<div class="container">
-			<div class="df-jcsb-aic">
-				<a href="#">
-					<img class="footer__logo" src="./assets/img/icons/logo-icon.svg" alt="">
-				</a>
-				<div class="footer__menu">
-					<div class="menu__item">
-						<p class="menu__title"> Новости
-						</p>
-						<div class="menu__links">
-							<a href="#" class="menu__link">Обновление 1.2</a>
-							<a href="#" class="menu__link">Рейтинг игроков</a>
-							<a href="#" class="menu__link">Лучшие команды</a>
-						</div>
-					</div>
-					<div class="menu__item">
-						<p class="menu__title"> Турниры
-						</p>
-						<div class="menu__links">
-							<a href="#" class="menu__link">Любительские</a>
-							<a href="#" class="menu__link">Профессионаьные</a>
-							<a href="#" class="menu__link">Трансляции</a>
-						</div>
-					</div>
-					<div class="menu__item">
-						<p class="menu__title"> Трансляции
-						</p>
-						<div class="menu__links">
-							<a href="#" class="menu__link">Прямые эфиры</a>
-							<a href="#" class="menu__link">Записи матчей</a>
-							<a href="#" class="menu__link">Турнирные игры</a>
-						</div>
-					</div>
-					<div class="menu__item">
-						<p class="menu__title"> О PlayStrike
-						</p>
-						<div class="menu__links">
-							<a href="#" class="menu__link">Поддержка</a>
-							<a href="#" class="menu__link">Партнёрам</a>
-							<a href="#" class="menu__link">Как играть</a>
-						</div>
-					</div>
-				</div>
-				<div class="footer__buttons">
-					<a class="button button_white df-jcsb-aic">Скачать на Mac <img class="apple__icon"
-							src="./assets/img/icons/apple-icon-white.svg" alt=""></a>
-					<a class="button button_white df-jcsb-aic"> Скачать на Windows <img
-							src="./assets/img/icons/windows-icon-white.svg" alt=""></a>
-					<div class="footer__socials df-jcsb-aic">
-						<a class="footer__social-link" href="">
-							<svg viewBox="0 0 11 23" fill="none">
-								<path
-									d="M2.80805 23V12.2077H0V8.322H2.80805V5.00307C2.80805 2.39504 4.46677 0 8.28882 0C9.83631 0 10.9806 0.150765 10.9806 0.150765L10.8904 3.77938C10.8904 3.77938 9.72344 3.76784 8.44996 3.76784C7.07167 3.76784 6.85085 4.41333 6.85085 5.48469V8.322H11L10.8195 12.2077H6.85085V23H2.80805Z"
-									fill="#F8F8F8" class="icon__path"></path>
-							</svg>
-						</a>
-						<a class="footer__social-link" href="">
-							<svg viewBox="0 0 27 27" fill="none">
-								<path
-									d="M13.4964 8.99808C11.0175 8.99808 8.99454 11.0211 8.99454 13.5C8.99454 15.9789 11.0175 18.0019 13.4964 18.0019C15.9752 18.0019 17.9982 15.9789 17.9982 13.5C17.9982 11.0211 15.9752 8.99808 13.4964 8.99808ZM26.9985 13.5C26.9985 11.6357 27.0154 9.78837 26.9107 7.92748C26.806 5.76602 26.3129 3.84773 24.7324 2.26716C23.1485 0.683215 21.2336 0.19351 19.0722 0.0888138C17.2079 -0.0158819 15.3606 0.00100455 13.4997 0.00100455C11.6355 0.00100455 9.78819 -0.0158819 7.92734 0.0888138C5.76592 0.19351 3.84766 0.686593 2.26712 2.26716C0.683203 3.85111 0.193506 5.76602 0.0888122 7.92748C-0.0158816 9.79174 0.00100453 11.6391 0.00100453 13.5C0.00100453 15.3609 -0.0158816 17.2116 0.0888122 19.0725C0.193506 21.234 0.68658 23.1523 2.26712 24.7328C3.85103 26.3168 5.76592 26.8065 7.92734 26.9112C9.79156 27.0159 11.6389 26.999 13.4997 26.999C15.364 26.999 17.2113 27.0159 19.0722 26.9112C21.2336 26.8065 23.1518 26.3134 24.7324 24.7328C26.3163 23.1489 26.806 21.234 26.9107 19.0725C27.0188 17.2116 26.9985 15.3643 26.9985 13.5ZM13.4964 20.4268C9.66323 20.4268 6.56969 17.3332 6.56969 13.5C6.56969 9.66679 9.66323 6.57319 13.4964 6.57319C17.3295 6.57319 20.423 9.66679 20.423 13.5C20.423 17.3332 17.3295 20.4268 13.4964 20.4268ZM20.7067 7.90722C19.8118 7.90722 19.089 7.18448 19.089 6.2895C19.089 5.39452 19.8118 4.67179 20.7067 4.67179C21.6017 4.67179 22.3244 5.39452 22.3244 6.2895C22.3247 6.50202 22.283 6.7125 22.2018 6.90889C22.1206 7.10528 22.0015 7.28373 21.8512 7.434C21.7009 7.58427 21.5225 7.70342 21.3261 7.78462C21.1297 7.86583 20.9192 7.90749 20.7067 7.90722Z"
-									fill="#F4F1EA" class="icon__path"></path>
-							</svg>
-						</a>
-
-						<a class="footer__social-link" href="">
-							<svg viewBox="0 0 23 23" fill="none">
-								<path
-									d="M22.6579 4.7311C21.8577 5.08568 20.998 5.32527 20.0943 5.43356C21.0268 4.87561 21.7244 3.99746 22.057 2.96298C21.1809 3.48334 20.2221 3.84962 19.2222 4.04589C18.5499 3.32797 17.6593 2.85212 16.6887 2.69222C15.7182 2.53232 14.722 2.69732 13.8548 3.16159C12.9877 3.62587 12.2981 4.36345 11.8931 5.25982C11.488 6.15619 11.3903 7.16119 11.615 8.11881C9.83986 8.02968 8.1033 7.56829 6.51802 6.76459C4.93274 5.96089 3.53417 4.83284 2.41307 3.45364C2.02974 4.11489 1.80932 4.88156 1.80932 5.69806C1.8089 6.4331 1.98991 7.15688 2.33629 7.80518C2.68268 8.45348 3.18373 9.00626 3.79499 9.41448C3.08609 9.39192 2.39283 9.20037 1.77291 8.85577V8.91327C1.77284 9.94419 2.12944 10.9434 2.78221 11.7413C3.43498 12.5392 4.3437 13.0867 5.3542 13.2909C4.69657 13.4689 4.00711 13.4951 3.33787 13.3676C3.62297 14.2546 4.17832 15.0303 4.92618 15.5861C5.67403 16.1418 6.57695 16.4498 7.50853 16.4669C5.92712 17.7083 3.97409 18.3817 1.96362 18.3787C1.60748 18.3788 1.25165 18.358 0.897949 18.3164C2.9387 19.6286 5.31427 20.3249 7.74045 20.3222C15.9534 20.3222 20.4432 13.52 20.4432 7.62048C20.4432 7.42881 20.4384 7.23523 20.4297 7.04356C21.3031 6.41199 22.0569 5.62992 22.6559 4.73398L22.6579 4.7311Z"
-									fill="#F8F8F8" class="icon__path"></path>
-							</svg>
-						</a>
-						<a class="footer__social-link" href="">
-							<svg viewBox="0 0 32 32" fill="none">
-								<g clip-path="url(#clip0)">
-									<path
-										d="M31.3332 8.67594C31.152 8.02958 30.799 7.4444 30.3118 6.98261C29.8109 6.50661 29.1969 6.16612 28.5278 5.99327C26.0238 5.33327 15.9918 5.33327 15.9918 5.33327C11.8096 5.28569 7.62842 5.49497 3.47185 5.95994C2.80277 6.14556 2.18993 6.49365 1.68785 6.97327C1.19451 7.44794 0.83718 8.03327 0.650513 8.67461C0.202104 11.0903 -0.0157643 13.5431 -0.000153652 15.9999C-0.0161537 18.4546 0.20118 20.9066 0.650513 23.3253C0.83318 23.9639 1.18918 24.5466 1.68385 25.0173C2.17851 25.4879 2.79451 25.8279 3.47185 26.0079C6.00918 26.6666 15.9918 26.6666 15.9918 26.6666C20.1794 26.7143 24.3659 26.505 28.5278 26.0399C29.1969 25.8671 29.8109 25.5266 30.3118 25.0506C30.8052 24.5799 31.1558 23.9946 31.3318 23.3573C31.792 20.9425 32.0157 18.4887 31.9998 16.0306C32.0345 13.5621 31.811 11.0967 31.3332 8.67461V8.67594ZM12.8025 20.5653V11.4359L21.1492 16.0013L12.8025 20.5653Z"
-										fill="#F4F1EA" class="icon__path"></path>
-								</g>
-								<defs>
-									<clipPath id="clip0">
-										<rect width="32" height="32" fill="white"></rect>
-									</clipPath>
-								</defs>
-							</svg>
-						</a>
-					</div>
-				</div>
+	<footer class="neFooter">
+		<div class="neFooterContent">
+			<div class="footerAgit" style="">
+				<h1>Готов себя попробовать? Тогда вперед!</h1>
+				<p>Тысячи игроков ждут тебя на поле боя</p>
+				<a href="https://my.playstrike.ru/auth/signup" class="button_yellow">Начать играть</a>
 			</div>
-			<div class="footer__bottom">
-				<a href="#">Пользовательское соглашение</a>
-				<a href="#">Помощь</a>
-				<a href="#">Все права защищены. 2021</a>
+			<div class="footerLink">
+				<div class="footerLinkContent">
+					<div class="logoFooter"><img src="assets/img/icons/playstrike.png" alt=""></div>
+					<div class="documents">
+						<a href="">Пользовательское соглашение</a>
+					</div>
+
+					<div class="footer__links">
+						<a href="https://t.me/PlayStrike">
+							<img src="./assets/img/icons/tg.svg" alt="">
+						</a>
+						<a href="https://vk.com/playstrike">
+							<img src="./assets/img/icons/vk.svg" alt="">
+						</a>
+						<a href="https://rutube.ru/channel/24737596/">
+							<img src="./assets/img/icons/rt.svg" alt="">
+						</a>
+					</div>
+					<span>2022 © Playstrike.ru</span>
+				</div>
 			</div>
 		</div>
-		<svg width="639" height="722" viewBox="0 0 126 143" fill="none" xmlns="http://www.w3.org/2000/svg"
-			class="footer__back">
-			<path
-				d="M34.2261 15.8088L71.7106 49.3683L65.2214 65.0902L50.0422 46.4288L50.4525 48.4141L40.5359 57.6262L34.2261 15.8088Z"
-				fill="#FAC704" />
-			<path d="M50.9504 50.8967L60.1529 62.7016L27.6414 98.8003L0.40332 98.9503L50.9504 50.8967Z" fill="#FAC704" />
-			<path
-				d="M77.1265 43.9397L73.131 47.5999L63.5658 38.7246L104.496 0L53.7148 142.209L44.7026 83.3048L54.9196 72.5508L58.2117 88.2366L77.1265 43.9397Z"
-				fill="#FAC704" />
-			<path d="M85.4974 62.228L78.8032 81.1829L93.0449 98.5566L125.989 98.5965L85.4974 62.228Z" fill="#FAC704" />
-		</svg>
 	</footer>
 	<button class="to__top">
 		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" class="bi bi-chevron-double-up"
@@ -778,20 +698,7 @@
 				d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z" />
 		</svg>
 	</button>
-	<script>
-		window.onload = function () {
-			document.body.classList.add('loaded');
-		}
-	</script>
-	<script>
-		window.onload = function () {
-			document.body.classList.add('loaded_hiding');
-			window.setTimeout(function () {
-				document.body.classList.add('loaded');
-				document.body.classList.remove('loaded_hiding');
-			}, 500);
-		}
-	</script>
+
 	<script src='assets/scripts/slider.js'></script>
 	<script src='assets/scripts/wow.js'></script>
 	<script src='assets/scripts/index.js'></script>
