--- a/apps.html
+++ b/apps.html
@@ -14,71 +14,83 @@
 </head>
 
 <body>
-<div class="preloader">
-  <div class="preloader__row">
-    <div class="preloader__item"></div>
-    <div class="preloader__item"></div>
-  </div>
-</div>
-<header>
-<div id="trailer" class="is_overlay" style="height: 70vh;min-height: 600px;">   
+	<div class="preloader">
+		<div class="preloader__row">
+			<div class="preloader__item"></div>
+			<div class="preloader__item"></div>
+		</div>
+	</div>
+	<header>
+		<div id="trailer" class="is_overlay" style="height: 70vh;min-height: 600px;">
 
-<div class="wallopers">
-    <div class="headerMenu">
-	<div class="headerMenuContent">
-		<div class="logotype">
-        
-        <a href="#"><img src="assets/img/icons/playstrike.png"></a>
-        </div>
-<!---->
-		<div class="navigatoin">
-<!--
+			<div class="wallopers">
+				<div class="headerMenu">
+					<div class="headerMenuContent">
+						<div class="logotype">
+
+							<a href="/index.html"><img src="assets/img/icons/playstrike.png"></a>
+						</div>
+						<!---->
+						<div class="navigatoin">
+							<!--
 			<a href="">Главная</a>
 			<a href="">Трансляции</a>
 			<a href="">Лиги</a>
 			<a href="">Приложение</a>
 			<a href="">Аналитика</a>
 -->
-    <a href="https://my.playstrike.ru/auth/signup"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" class="zK0LQ"><path d="M15.364 2.636A8.941 8.941 0 0 0 9 0a8.941 8.941 0 0 0-6.364 2.636A8.941 8.941 0 0 0 0 9a8.94 8.94 0 0 0 2.636 6.364A8.941 8.941 0 0 0 9 18a8.941 8.941 0 0 0 6.364-2.636A8.941 8.941 0 0 0 18 9a8.941 8.941 0 0 0-2.636-6.364zM3.906 15.092A5.149 5.149 0 0 1 9 10.562c1.37 0 2.658.533 3.627 1.502a5.125 5.125 0 0 1 1.467 3.028A7.91 7.91 0 0 1 9 16.945a7.909 7.909 0 0 1-5.094-1.853zM9 9.475A2.737 2.737 0 0 1 6.266 6.74 2.737 2.737 0 0 1 9 4.008a2.737 2.737 0 0 1 2.734 2.733A2.737 2.737 0 0 1 9 9.475zm6.002 4.726a6.184 6.184 0 0 0-1.63-2.883 6.164 6.164 0 0 0-2.251-1.44 3.787 3.787 0 1 0-4.24.002c-.77.28-1.482.714-2.095 1.284A6.164 6.164 0 0 0 2.997 14.2 7.912 7.912 0 0 1 1.055 9c0-4.381 3.564-7.945 7.945-7.945S16.945 4.619 16.945 9a7.911 7.911 0 0 1-1.943 5.2z" fill="#FFF"></path></svg> Создать аккаунт</a>
-    <a href="https://my.playstrike.ru/auth/signin"><svg width="18" height="18" viewBox="0 0 18 18" xmlns="http://www.w3.org/2000/svg" class="zK0LQ"><path d="M18 0h-3.936L8.999 6.003 3.937 0H0v3.937L6.278 9.23l-.867 1.028a2.635 2.635 0 0 0-3.262.371l-.373.373 1.492 1.492-2.341 2.34H0V18h3.164v-.927l2.341-2.34 1.492 1.49.373-.372a2.64 2.64 0 0 0 .37-3.262L9 11.527l1.26 1.062a2.64 2.64 0 0 0 .37 3.262l.373.373 1.492-1.492 2.34 2.341V18H18v-3.164h-.927l-2.34-2.341 1.49-1.492-.372-.373a2.635 2.635 0 0 0-3.263-.37l-.865-1.027L18 3.936V0zM2.11 16.945H1.054v-1.054h.309l.745.745v.31zm.745-1.054l-.746-.746 1.905-1.904.61.61.135.135-1.904 1.905zm4.078-1.223L3.33 11.067a1.582 1.582 0 0 1 1.801.31l1.492 1.49c.486.487.589 1.213.309 1.801zm.111-2.871l-.84-.841.88-1.045 1.099.926-1.139.96zm9.901 4.094v1.054h-1.054v-.309l.745-.745h.31zm-1.054-.746l-.746.746-1.904-1.905.135-.135.61-.61 1.905 1.904zm-3.023-3.769a1.582 1.582 0 0 1 1.8-.31l-3.6 3.602a1.585 1.585 0 0 1 .308-1.8l1.492-1.492zm-1.072-.42l-.84.84-9.901-8.35V1.055h2.391l8.35 9.901zm5.15-7.51l-5.903 4.98-1.354-1.605 4.865-5.766h2.391v2.391z" fill="#FFF"></path></svg> Начать играть</a>
-		</div>
+							<a href="https://my.playstrike.ru/auth/signup"><svg width="18" height="18" viewBox="0 0 18 18"
+									xmlns="http://www.w3.org/2000/svg" class="zK0LQ">
+									<path
+										d="M15.364 2.636A8.941 8.941 0 0 0 9 0a8.941 8.941 0 0 0-6.364 2.636A8.941 8.941 0 0 0 0 9a8.94 8.94 0 0 0 2.636 6.364A8.941 8.941 0 0 0 9 18a8.941 8.941 0 0 0 6.364-2.636A8.941 8.941 0 0 0 18 9a8.941 8.941 0 0 0-2.636-6.364zM3.906 15.092A5.149 5.149 0 0 1 9 10.562c1.37 0 2.658.533 3.627 1.502a5.125 5.125 0 0 1 1.467 3.028A7.91 7.91 0 0 1 9 16.945a7.909 7.909 0 0 1-5.094-1.853zM9 9.475A2.737 2.737 0 0 1 6.266 6.74 2.737 2.737 0 0 1 9 4.008a2.737 2.737 0 0 1 2.734 2.733A2.737 2.737 0 0 1 9 9.475zm6.002 4.726a6.184 6.184 0 0 0-1.63-2.883 6.164 6.164 0 0 0-2.251-1.44 3.787 3.787 0 1 0-4.24.002c-.77.28-1.482.714-2.095 1.284A6.164 6.164 0 0 0 2.997 14.2 7.912 7.912 0 0 1 1.055 9c0-4.381 3.564-7.945 7.945-7.945S16.945 4.619 16.945 9a7.911 7.911 0 0 1-1.943 5.2z"
+										fill="#FFF"></path>
+								</svg> Создать аккаунт</a>
+							<a href="https://my.playstrike.ru/auth/signin"><svg width="18" height="18" viewBox="0 0 18 18"
+									xmlns="http://www.w3.org/2000/svg" class="zK0LQ">
+									<path
+										d="M18 0h-3.936L8.999 6.003 3.937 0H0v3.937L6.278 9.23l-.867 1.028a2.635 2.635 0 0 0-3.262.371l-.373.373 1.492 1.492-2.341 2.34H0V18h3.164v-.927l2.341-2.34 1.492 1.49.373-.372a2.64 2.64 0 0 0 .37-3.262L9 11.527l1.26 1.062a2.64 2.64 0 0 0 .37 3.262l.373.373 1.492-1.492 2.34 2.341V18H18v-3.164h-.927l-2.34-2.341 1.49-1.492-.372-.373a2.635 2.635 0 0 0-3.263-.37l-.865-1.027L18 3.936V0zM2.11 16.945H1.054v-1.054h.309l.745.745v.31zm.745-1.054l-.746-.746 1.905-1.904.61.61.135.135-1.904 1.905zm4.078-1.223L3.33 11.067a1.582 1.582 0 0 1 1.801.31l1.492 1.49c.486.487.589 1.213.309 1.801zm.111-2.871l-.84-.841.88-1.045 1.099.926-1.139.96zm9.901 4.094v1.054h-1.054v-.309l.745-.745h.31zm-1.054-.746l-.746.746-1.904-1.905.135-.135.61-.61 1.905 1.904zm-3.023-3.769a1.582 1.582 0 0 1 1.8-.31l-3.6 3.602a1.585 1.585 0 0 1 .308-1.8l1.492-1.492zm-1.072-.42l-.84.84-9.901-8.35V1.055h2.391l8.35 9.901zm5.15-7.51l-5.903 4.98-1.354-1.605 4.865-5.766h2.391v2.391z"
+										fill="#FFF"></path>
+								</svg> Начать играть</a>
+						</div>
 
-<!-- 		<div class="users">
+						<!-- 		<div class="users">
 		    <a href="Создать аккаунт"></a><a href="Войти"></a>
 		</div> -->
-	</div>
-</div>
-	<section class="main wow fadeInDown" data-wow-duration="2s"style="padding-top:12vh;margin: 0 auto;min-height: 600px;">
-		<div class="container">
-			<!-- <div class="main__logo">
+					</div>
+				</div>
+				<section class="main wow fadeInDown" data-wow-duration="2s"
+					style="padding-top:12vh;margin: 0 auto;min-height: 600px;">
+					<div class="container">
+						<!-- <div class="main__logo">
 				<img src="./assets/img/icons/logo-icon.svg" alt="">
 			</div> -->
-			<h1 class="main__title title">Приложение Playstrike </h1>
-			<p class="main__description">В данный момент приложение не доступно, следите за новостями</p>
-			<a href="https://my.playstrike.ru/auth/signup" class="button_yellow" style="margin:0; width:150px;">Перейти на сайт</a>
+						<h1 class="main__title title">Приложение Playstrike </h1>
+						<p class="main__description">В данный момент приложение не доступно, следите за новостями</p>
+						<a href="https://my.playstrike.ru/auth/signup" class="button_yellow" style="margin:0; width:150px;">Перейти
+							на сайт</a>
 
-			<!--<div class="main__buttons df-jcsb-aic">
+						<!--<div class="main__buttons df-jcsb-aic">
 				<a class="button button_yellow-transparent df-jcsb-aic" style="/*background: #FAC704;
     color: #161616;margin-right: 8vw;*/margin-right:2vw;" href="https://my.playstrike.ru/auth/signup">Скачать на Mac <img class="apple__icon" src="./assets/img/icons/apple-icon.svg" alt=""></a>
 				<a class="button button_yellow-transparent df-jcsb-aic"> Скачать на Windows <img
 						src="./assets/img/icons/windows-icon.svg" alt=""></a>
 
 			</div>-->
-		<!--	<a href=""><p class="macos">Скачать версию приложения для MacOS 
+						<!--	<a href=""><p class="macos">Скачать версию приложения для MacOS 
 
 						</p></a>-->
+					</div>
+				</section>
+
+			</div>
+
+
+
 		</div>
-	</section>
-
-</div> 
 
 
 
-</div>
-
-
-
-</header>
+	</header>
 
 	<!-- <header class="page__header df-jcsb-aic wow fadeInDown" data-wow-duration="0.5s">
 		<a href="#">
@@ -104,7 +116,7 @@
 	</header> -->
 
 
-<!--
+	<!--
 	<section class="partners wow fadeInDown" data-wow-duration="0.5s">
 		<div class="partners__swiper">
 			<div class="swiper-wrapper">
@@ -133,7 +145,7 @@
 		</div>
 	</section>
 -->
-<!--
+	<!--
 	<section class="benefits wow fadeInUp" data-wow-duration="1s" style="margin-top: 6vh;">
 		<div class="container df-jcsb-aic">
 			<div class="benefits__card card wow fadeInUp" data-wow-duration="0.5s" data-wow-delay="0.5s">
@@ -167,7 +179,7 @@
 		</div>
 	</section>
 -->
-<!-- 	<section class="news news__container wow fadeInUp" data-wow-duration="0.5s" style="    background: #2223299c;
+	<!-- 	<section class="news news__container wow fadeInUp" data-wow-duration="0.5s" style="    background: #2223299c;
 	    padding-top: 42px;">
 	    <h2 class="promotions__title title" style="margin-bottom: 4.8vh;">Свежие новости</h2>
 	    <div class="news__swiper">
@@ -195,7 +207,7 @@
 	        </div>
 	    </div>
 	</section> -->
-<!--
+	<!--
 
 	<section class="games">
 		<div class="container df-jcsb-aic">
@@ -263,7 +275,7 @@
 		</div>
 	</section>
 -->
-<!--
+	<!--
 	<section class="players wow fadeInUp" data-wow-duration="0.5s">
 		<div class="container">
 			<h2 class="professional__title title">Профессиональные игроки</h2>
@@ -420,9 +432,9 @@
 	</section>
 	
 -->
-	
-	
-<!--
+
+
+	<!--
 	<section class="banner">
 		<div class="container  df-jcsb-aic">
 			<p>Бонус 500 BS для новых игроков</p>
@@ -603,7 +615,7 @@
 		</div>
 	</section>
 -->
-<!--
+	<!--
 
 	<section class="statistic">
 		<div class="container statistic__wrapper">
@@ -662,28 +674,39 @@
 	</section>
 -->
 
-<div class="neFooter">
-    <div class="neFooterContent">
-        <div class="footerAgit" style="">
-        <h1>Готов себя попробовать? Тогда вперед!</h1>
-        <p>Тысячи игроков ждут тебя на поле боя</p>
-        <a href="https://my.playstrike.ru/auth/signup">Начать играть</a>
-        </div>
-        <div class="footerLink">
-            <div class="footerLinkContent">
-            <div class="logoFooter"><img src="assets/img/icons/playstrike.png" alt=""></div>
-            <div class="documents">
-            <a href="">Пользовательское соглашение</a>
-            <a href="">Политика конфеденциальности</a></div>
-            <div class="social"></div>
-            <span>2022 © Playstrike.ru</span>
-        </div>
-        </div>
-    </div>
-</div>
+<footer class="neFooter apps">
+	<div class="neFooterContent">
+		<div class="footerAgit" style="">
+			<h1>Готов себя попробовать? Тогда вперед!</h1>
+			<p>Тысячи игроков ждут тебя на поле боя</p>
+			<a href="https://my.playstrike.ru/auth/signup" class="button_yellow">Начать играть</a>
+		</div>
+		<div class="footerLink">
+			<div class="footerLinkContent">
+				<div class="logoFooter"><img src="assets/img/icons/playstrike.png" alt=""></div>
+				<div class="documents">
+					<a href="">Пользовательское соглашение</a>
+				</div>
+
+				<div class="footer__links">
+					<a href="https://t.me/PlayStrike">
+						<img src="./assets/img/icons/tg.svg" alt="">
+					</a>
+					<a href="https://vk.com/playstrike">
+						<img src="./assets/img/icons/vk.svg" alt="">
+					</a>
+					<a href="https://rutube.ru/channel/24737596/">
+						<img src="./assets/img/icons/rt.svg" alt="">
+					</a>
+				</div>
+				<span>2022 © Playstrike.ru</span>
+			</div>
+		</div>
+	</div>
+</footer>
 
 
-<!--
+	<!--
 
 	<footer class="footer">
 		<div class="container">
@@ -794,24 +817,15 @@
 	</footer>
 -->
 	<button class="to__top">
-		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" class="bi bi-chevron-double-up" viewBox="0 0 16 16">
-			<path fill-rule="evenodd" d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z"/>
-			<path fill-rule="evenodd" d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z"/>
+		<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="none" class="bi bi-chevron-double-up"
+			viewBox="0 0 16 16">
+			<path fill-rule="evenodd"
+				d="M7.646 2.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 3.707 2.354 9.354a.5.5 0 1 1-.708-.708l6-6z" />
+			<path fill-rule="evenodd"
+				d="M7.646 6.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1-.708.708L8 7.707l-5.646 5.647a.5.5 0 0 1-.708-.708l6-6z" />
 		</svg>
 	</button>
-<script>
-  window.onload = function () {
-    document.body.classList.add('loaded');
-  }
-</script><script>
-  window.onload = function () {
-    document.body.classList.add('loaded_hiding');
-    window.setTimeout(function () {
-      document.body.classList.add('loaded');
-      document.body.classList.remove('loaded_hiding');
-    }, 500);
-  }
-</script>
+
 	<script src='./assets/scripts/slider.js'></script>
 	<script src='./assets/scripts/wow.js'></script>
 	<script src='./assets/scripts/index.js'></script>
