--- a/apps.html
+++ b/apps.html
@@ -28,7 +28,7 @@
 					<div class="headerMenuContent">
 						<div class="logotype">
 
-							<a href="/index.html"><img src="assets/img/icons/playstrike.png"></a>
+							<a href="/"><img src="assets/img/icons/playstrike.png"></a>
 						</div>
 						<!---->
 						<div class="navigatoin">
