--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
 						<div class="main__buttons df-jcsb-aic">
 							<a class="button button_yellow-transparent df-jcsb-aic" style="background: #FAC704;
     color: #161616;margin-right: 2vw;" href="https://my.playstrike.ru/auth/signup">Начать играть</a>
-							<a class="button button_yellow-transparent df-jcsb-aic" href="/apps.html"> Скачать на Windows <img
+							<a class="button button_yellow-transparent df-jcsb-aic" href="/apps"> Скачать на Windows <img
 									src="./assets/img/icons/windows-icon.svg" alt=""></a>
 
 						</div>
 						<a href="">
-							<a class="macos" href="/apps.html">Скачать версию приложения для MacOS
+							<a class="macos" href="/apps">Скачать версию приложения для MacOS
 								<!--        <img class="apple__icon" src="./assets/img/icons/apple-icon.svg" alt="">-->
 							</a>
 						</a>
@@ -649,9 +649,9 @@
 					</div>
 				</div>
 				<div class="application__buttons df-jcsb-aic">
-					<a class="button button_yellow-transparent df-jcsb-aic" href="/apps.html">Скачать на Mac <img
+					<a class="button button_yellow-transparent df-jcsb-aic" href="/apps">Скачать на Mac <img
 							class="apple__icon" src="./assets/img/icons/apple-icon.svg" alt=""></a>
-					<a class="button button_yellow-transparent df-jcsb-aic" href="/apps.html"> Скачать на Windows <img
+					<a class="button button_yellow-transparent df-jcsb-aic" href="/apps"> Скачать на Windows <img
 							src="./assets/img/icons/windows-icon.svg" alt=""></a>
 				</div>
 			</div>
