--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 			<h2 class="promotions__title"> Акции и бонусы от PlayStrike</h2>
 			<div class="promotions__card">
 				<div class="promotions__card-title">Акции и бонусы</div>
-				<div class="promotions__card-descriptions">Пополни баланс сегодня и получи Profeccional подписку на 30 дней
+				<div class="promotions__card-descriptions">Пополни баланс сегодня и получи Professional подписку на 30 дней
 				</div>
 				<a href="https://my.playstrike.ru/" class="button button_white promotions__button">Создать аккаунт</a>
 			</div>
