--- a/apps.html
+++ b/apps.html
@@ -685,7 +685,7 @@
 			<div class="footerLinkContent">
 				<div class="logoFooter"><img src="assets/img/icons/playstrike.png" alt=""></div>
 				<div class="documents">
-					<a href="">Пользовательское соглашение</a>
+				<a href="/privacy.html">Пользовательское соглашение</a>
 				</div>
 
 				<div class="footer__links">
