--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <span class="ps_logo_us">Playstrike <img src="assets/img/icons/icon.svg" alt=""></span><span></span></div>
             <div class="titleLink"><a href="https://my.playstrike.ru/">СЛЕДИТЕ ЗА НОВОСТЯМИ <img src="assets/img/icons/link.svg" alt=""></a></div>
             </div>
-            <h1>КИБЕРСПОРТИВНАЯ СОЦСЕТЬ БУДЕЩЕГО</h1>
+            <h1>КИБЕРСПОРТИВНАЯ СОЦСЕТЬ БУДУЩЕГО</h1>
             </div>            
             <div class="usConent_Steps">
                 <div class="su_step">
