--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 	<link rel="stylesheet" href='assets/css/swiper.min.css'>
 	<link rel="stylesheet" href='assets/css/style.css'>
 	<link rel="stylesheet" href='assets/css/wowjs.css'>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-KW46J5T');</script>
+	<!-- End Google Tag Manager -->
 </head>
 
 <body>
@@ -405,6 +412,10 @@
 		<script src='assets/scripts/slider.js'></script>
 		<script src='assets/scripts/wow.js'></script>
 		<script src='assets/scripts/index.js'></script>
+		<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KW46J5T"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+	<!-- End Google Tag Manager (noscript) -->
 </body>
 
 </html>
