--- a/index.html
+++ b/index.html
@@ -14,36 +14,6 @@
 </head>
 
 <body>
-	<!-- Yandex.Metrika counter -->
-	<script type="text/javascript">
-		(function (m, e, t, r, i, k, a) {
-			m[i] = m[i] || function () {
-				(m[i].a = m[i].a || []).push(arguments)
-			};
-			m[i].l = 1 * new Date();
-			k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
-		})
-		(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
-
-		ym(88482034, "init", {
-			clickmap: true,
-			trackLinks: true,
-			accurateTrackBounce: true,
-			webvisor: true
-		});
-	</script>
-	<noscript>
-		<div><img src="https://mc.yandex.ru/watch/88482034" style="position:absolute; left:-9999px;" alt="" /></div>
-	</noscript>
-	<!-- /Yandex.Metrika counter -->
-	<!---->
-	<div class="preloader">
-		<div class="preloader__row">
-			<div class="preloader__item"></div>
-			<div class="preloader__item"></div>
-		</div>
-	</div>
-
 	<header>
 		<div id="trailer" class="is_overlay">
 			<video autoplay muted loop id="video" width="100%" height="auto" style="position: absolute;">
@@ -66,13 +36,13 @@
 			<a href="">Приложение</a>
 			<a href="">Аналитика</a>
 -->
-							<a href="https://my.playstrike.ru/auth/signup"><svg width="18" height="18" viewBox="0 0 18 18"
+							<a href="https://my.playstrike.ru/"><svg width="18" height="18" viewBox="0 0 18 18"
 									xmlns="http://www.w3.org/2000/svg" class="zK0LQ">
 									<path
 										d="M15.364 2.636A8.941 8.941 0 0 0 9 0a8.941 8.941 0 0 0-6.364 2.636A8.941 8.941 0 0 0 0 9a8.94 8.94 0 0 0 2.636 6.364A8.941 8.941 0 0 0 9 18a8.941 8.941 0 0 0 6.364-2.636A8.941 8.941 0 0 0 18 9a8.941 8.941 0 0 0-2.636-6.364zM3.906 15.092A5.149 5.149 0 0 1 9 10.562c1.37 0 2.658.533 3.627 1.502a5.125 5.125 0 0 1 1.467 3.028A7.91 7.91 0 0 1 9 16.945a7.909 7.909 0 0 1-5.094-1.853zM9 9.475A2.737 2.737 0 0 1 6.266 6.74 2.737 2.737 0 0 1 9 4.008a2.737 2.737 0 0 1 2.734 2.733A2.737 2.737 0 0 1 9 9.475zm6.002 4.726a6.184 6.184 0 0 0-1.63-2.883 6.164 6.164 0 0 0-2.251-1.44 3.787 3.787 0 1 0-4.24.002c-.77.28-1.482.714-2.095 1.284A6.164 6.164 0 0 0 2.997 14.2 7.912 7.912 0 0 1 1.055 9c0-4.381 3.564-7.945 7.945-7.945S16.945 4.619 16.945 9a7.911 7.911 0 0 1-1.943 5.2z"
 										fill="#FFF"></path>
 								</svg> Создать аккаунт</a>
-							<a href="https://my.playstrike.ru/auth/signin"><svg width="18" height="18" viewBox="0 0 18 18"
+							<a href="https://my.playstrike.ru/"><svg width="18" height="18" viewBox="0 0 18 18"
 									xmlns="http://www.w3.org/2000/svg" class="zK0LQ">
 									<path
 										d="M18 0h-3.936L8.999 6.003 3.937 0H0v3.937L6.278 9.23l-.867 1.028a2.635 2.635 0 0 0-3.262.371l-.373.373 1.492 1.492-2.341 2.34H0V18h3.164v-.927l2.341-2.34 1.492 1.49.373-.372a2.64 2.64 0 0 0 .37-3.262L9 11.527l1.26 1.062a2.64 2.64 0 0 0 .37 3.262l.373.373 1.492-1.492 2.34 2.341V18H18v-3.164h-.927l-2.34-2.341 1.49-1.492-.372-.373a2.635 2.635 0 0 0-3.263-.37l-.865-1.027L18 3.936V0zM2.11 16.945H1.054v-1.054h.309l.745.745v.31zm.745-1.054l-.746-.746 1.905-1.904.61.61.135.135-1.904 1.905zm4.078-1.223L3.33 11.067a1.582 1.582 0 0 1 1.801.31l1.492 1.49c.486.487.589 1.213.309 1.801zm.111-2.871l-.84-.841.88-1.045 1.099.926-1.139.96zm9.901 4.094v1.054h-1.054v-.309l.745-.745h.31zm-1.054-.746l-.746.746-1.904-1.905.135-.135.61-.61 1.905 1.904zm-3.023-3.769a1.582 1.582 0 0 1 1.8-.31l-3.6 3.602a1.585 1.585 0 0 1 .308-1.8l1.492-1.492zm-1.072-.42l-.84.84-9.901-8.35V1.055h2.391l8.35 9.901zm5.15-7.51l-5.903 4.98-1.354-1.605 4.865-5.766h2.391v2.391z"
@@ -96,7 +66,7 @@
 							призы</p>
 						<div class="main__buttons df-jcsb-aic">
 							<a class="button button_yellow-transparent df-jcsb-aic" style="background: #FAC704;
-    color: #161616;margin-right: 2vw;" href="https://my.playstrike.ru/auth/signup">Начать играть</a>
+    color: #161616;margin-right: 2vw;" href="https://my.playstrike.ru/">Начать играть</a>
 							<a class="button button_yellow-transparent df-jcsb-aic" href="/apps"> Скачать на Windows <img
 									src="./assets/img/icons/windows-icon.svg" alt=""></a>
 
@@ -188,7 +158,7 @@
 
 
 							<div class="su_button">
-								<a href="https://my.playstrike.ru/auth/signin">Начать сражаться</a>
+								<a href="https://my.playstrike.ru/">Начать сражаться</a>
 							</div>
 						</div>
 						<div class="su_step" style="border:none;">
@@ -387,7 +357,7 @@
 					<div class="footerAgit" style="">
 						<h1>Готов себя попробовать? Тогда вперед!</h1>
 						<p>Тысячи игроков ждут тебя на поле боя</p>
-						<a href="https://my.playstrike.ru/auth/signup" class="button_yellow">Начать играть</a>
+						<a href="https://my.playstrike.ru/" class="button_yellow">Начать играть</a>
 					</div>
 					<div class="footerLink">
 						<div class="footerLinkContent">
